test/libyul/yulSyntaxTests/loadimmutable.yul
{
    let addr := loadimmutable("address")
}
// ====
// dialect: evm
// ----
// TypeError 5017: (18-31): The identifier "loadimmutable" is reserved and can not be used.
